--- a/stylse/styles.css
+++ b/stylse/styles.css
@@ -9,20 +9,35 @@
 }
 body {
     font-family: "Roboto", sans-serif;
-    max-width: 1600px;
-    margin: 0 auto;
+    /* max-width: 1600px; */
+    /* margin: 0 auto; */
     color: var(--body-color);
 }
 .list {
     list-style: none;
+    display: flex;
+    /* padding-left: 0; */
+    flex-wrap: wrap;
 }
 .link {
     text-decoration: none;
 }
 /* -----------------HEDER --------------*/
 .header {
-    width: 1600px;
-    height: 80px;
+    /* width: 1600px; */
+    /* height: 80px; */
+    /* display: flex; */
+    
+    /* padding-top: 24px; */
+    /* padding-left: 215px; */
+    /* padding-bottom: 25px; */
+    /* margin-left: 215px; */
+    border: 1px solid #ECECEC;
+
+}
+.header-box {
+    display: flex;
+    align-items: center;
 }
 .headr-nav {
     font-size: 14px;
@@ -56,16 +71,39 @@ letter-spacing: 0.02em;
 .nav.link.current {
     color: var(--accent-color);
 }
+.nav-list {
+margin-left: 93px;
+}
+
 .nav-item {
-    display: inline;
+    margin-right: 50px;
+    padding-top: 32px;
+    padding-bottom: 32px;
+
+    
+}
+.nav-item:last-child{
+    margin-right: 0px;
+}
+
+.nav-item:last-child {
 }
 /* ------------------CONTACT------------- */
+.container {
+    width: 1200px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin: 0  auto;
+    /* outline: 2px solid red; */
+}
+
 .contact {
 font-style: normal;
 font-weight: 500;
 font-size: 14px;
 line-height: 1.14;
 letter-spacing: 0.02em;
+/* margin-left: 331px; */
 }
 
 .contact-link {
@@ -75,19 +113,28 @@ letter-spacing: 0.02em;
 .contact-link:focus {
     color: var(--accent-color);
 }
+.contact-list {
+    margin-left: 331px;
+}
 .contact-item {
-    display: inline;
+    margin-right: 50px;
+}
+.contact-item:last-child {
+    margin-right: 0px;
 }
 /* -------------------MAIN index------- */
 /* ------------------HERO index--------- */
 .hero {
-    width: 1600px;
-    height: 600px;
+    /* width: 1600px; */
+    /* height: 600px; */
     background-color: var(--background-color);
+    padding-top: 200px;
+    padding-bottom: 200px;
+    text-align: center;
+
 }
 .hero-title {
 color: var(--text-white-color);
-padding-top: 200px;
 font-style: normal;
 font-weight: 900;
 font-size: 44px;
@@ -95,28 +142,39 @@ line-height: 1.36;
 text-align: center;
 letter-spacing: 0.06em;
 text-transform: uppercase;
-
+max-width: 696px;
+margin: 0 auto;
+padding-bottom: 30px;
 }
 /* --------------------BTN index----------- */
 .order-btn {
 background-color: var(--accent-color);
 color: var(--text-white-color);
-margin-left: 700px;
 cursor: pointer;
 font-style: normal;
 font-weight: bold;
 font-size: 16px;
 line-height: 1.87;
-display: flex;
-align-items: center;
-text-align: center;
+/* display: flex; */
+/* align-items: center; */
+/* text-align: center; */
 letter-spacing: 0.06em;
 font-family: "Roboto";
+margin: 0 auto;
+
+
 }
 .order-btn:hover, .order-btn:focus {
     background-color: #2181f0;
 }
 /* -------------------FEATURES index----- */
+.features {
+    /* margin-left: 215px; */
+    /* margin-top: 94px; */
+    /* margin: 94px 0 94px 215px; */
+    padding-top: 94px;
+    padding-bottom: 94px;
+}
 .features-name {
 color: var(--headlines-color);
 font-style: normal;
@@ -135,52 +193,72 @@ line-height: 1.5;
 letter-spacing: 0.03em;
 }
 .features-list {
-    padding-left: 215px;
-    padding-top: 94px;
+    /* padding-left: 215px; */
+    /* padding-top: 94px; */
 }
 .features-item {
-    display: inline-block;
+    /* display: inline-block; */
     width: 270px;
+    margin-right: 30px;
+}
+.features-item:last-child {
+    margin-right: 0;
 }
 /* ------------------PIC index-------- */
 .pic-list {
-margin: 0;
-padding-left: 215px;
+/* margin: 0; */
+/* padding-left: 215px; */
 }
 
 .pic-title {
 color: var(--headlines-color);
 text-align: center;
-padding-top: 94px;
+/* padding-top: 94px; */
 font-style: normal;
 font-weight: bold;
 font-size: 36px;
 line-height: 1.16;
 letter-spacing: 0.03em;
+padding-bottom: 50px;
 }
 .pic-item {
-    display: inline-block;
+    /* display: inline-block; */
+    margin-right: 30px;
+        padding-bottom: 94px;
+}
+.pic-item:last-child {
+    margin-right: 0;
 }
 /* ---------------------TEAM index------ */
 .team {
-    width: 1600px;
-    height: 648px;
+    /* width: 1600px; */
+    /* height: 648px; */
     background-color: var(--btn-color);
+        padding-bottom: 94px;
+
 }
 .team-list {
-display: inline;
-padding-left: 215px;
+/* display: inline; */
+/* padding-left: 215px; */
+/* padding-top: 94px; */
 }
 .team-item {
-    width: 270px;
-    height: 368px;
+    /* width: 270px; */
+    /* height: 368px; */
     background-color: var(--text-white-color);
-    display: inline-block;
+    /* display: inline-block; */
+    margin-right: 30px;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+border-radius: 0px 0px 4px 4px;
+}
+.team-item:last-child {
+    margin-right: 0;
 }
 .team-title {
 color: var(--headlines-color);
 text-align: center;
 padding-top: 94px;
+padding-bottom: 50px;
 font-style: normal;
 font-weight: bold;
 font-size: 36px;
@@ -207,8 +285,19 @@ letter-spacing: 0.03em;
 }
 /* ----------------MAIN portfolio----- */
 /* --------------FILTER port----- */
+.filter-list {
+    /* align-items: center; */
+display: flex;
+justify-content: center;
+padding-top: 94px;
+padding-bottom: 50px;
+}
 .filter-item {
-    display: inline-block;
+        /* text-align: center; */
+margin-right: 8px;
+}
+.filter-item:last-child {
+    margin-right: 0;
 }
 .filter-btn {
 color: var(--headlines-color);
@@ -229,6 +318,8 @@ font-family: inherit;
 .filter-btn:focus {
     color: var(--text-white-color);
     background-color: var(--accent-color);
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+border-radius: 4px;
 }
 /* --------------PROJECT port---- */
 
@@ -242,6 +333,7 @@ letter-spacing: 0.06em;}
 .btn-current {
     background-color: var(--accent-color);
     color: var(--text-white-color);
+    
 }
 .projeсt-part {
 color:var(--text-color);
@@ -251,26 +343,45 @@ font-size: 16px;
 line-height: 1.87;
 letter-spacing: 0.03em;
 }
+.project-list {
+    list-style: none;
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: 94px;
+}
 .project-item {
     width: 370px;
-    height: 404px;
     background-color: var(--text-white-color);
-    display: inline-block;
+display: block;
+border: 1px solid #EEEEEE;
+margin-right: 30px;
+margin-bottom: 30px;
 }
-
+.project-item:nth-child(3n){
+    margin-right: 0;
+}
+/* .project-item:last-child { */
+    /* margin-bottom: 94px; */
+/* } */
+.
 /* -----footer-------- */
 .footer {
-background-color: var(--background-color);
 width: 1600px;
 height: 252px;
 }    
 .footer-box {
-    padding: 60px 1154px 60px 215px;
+    /* padding: 60px 1154px 60px 215px; */
+    margin-top: 94px;
+    padding-top: 60px;
+    padding-bottom: 60px;
+    background-color: var(--background-color);
+
 }
 .footer-adr {
     padding-top: 20px;
     padding-bottom: 9px;
     font-style: normal;
+    /* display: flex; */
 }
 .footer-logo-link {
     color: var(--text-white-color);
@@ -280,6 +391,8 @@ font-weight: bold;
 font-size: 26px;
 line-height: 1.1;
 letter-spacing: 0.03em;
+/* padding-bottom: 20px; */
+
 }
 .footer-map {
 color: var(--text-white-color);
@@ -290,7 +403,13 @@ line-height: 1.71;
 letter-spacing: 0.03em;
 }
 .footer-list {
-    padding: 0;
+    /* padding: 0; */
+    display: inline;
+}
+
+.footer-item {
+    box-sizing: border-box;
+
 }
 .footer-list-link {
 color: rgba(255, 255, 255, 0.6);
@@ -299,6 +418,10 @@ font-weight: normal;
 font-size: 14px;
 line-height: 1.71;
 letter-spacing: 0.03em;
+padding-bottom: 9px;
+}
+.footer-list-link:last-child {
+    padding-bottom: 0;
 }
 .footer-list-link:hover,
 .footer-list-link:focus {
