--- a/stylse/styles.css
+++ b/stylse/styles.css
@@ -7,14 +7,20 @@
     --btn-color: #F5F4FA;
     --body-color:#E5E5E5;
 }
+.container {
+    width: 1200px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin: 0  auto;
+    outline: 2px solid tomato;
+}
+
 body {
     font-family: "Roboto", sans-serif;
     color: var(--body-color);
 }
 .list {
     list-style: none;
-    display: flex;
-    flex-wrap: wrap;
 }
 .link {
     text-decoration: none;
@@ -23,10 +29,12 @@ body {
 .header {
     border: 1px solid #ECECEC;
 
+
 }
 .header-box {
-    display: flex;
     align-items: center;
+        display: flex;
+
 }
 .headr-nav {
     font-size: 14px;
@@ -52,6 +60,11 @@ font-weight: 500;
 font-size: 14px;
 line-height: 1.14;
 letter-spacing: 0.02em;
+    padding-top: 32px;
+    padding-bottom: 32px;
+    display: block;
+
+
 }
 .nav:hover, 
 .nav:focus {
@@ -62,15 +75,12 @@ letter-spacing: 0.02em;
 }
 .nav-list {
 margin-left: 93px;
+display: flex;
 }
 
 .nav-item {
     margin-right: 50px;
-    padding-top: 32px;
-    padding-bottom: 32px;
-
-    
-}
+    }
 .nav-item:last-child{
     margin-right: 0px;
 }
@@ -78,23 +88,21 @@ margin-left: 93px;
 .nav-item:last-child {
 }
 /* ------------------CONTACT------------- */
-.container {
-    width: 1200px;
-    padding-left: 15px;
-    padding-right: 15px;
-    margin: 0  auto;
-}
 
-.contact {
-font-style: normal;
+
+.contact-link {
+    font-style: normal;
 font-weight: 500;
 font-size: 14px;
 line-height: 1.14;
 letter-spacing: 0.02em;
-}
-
-.contact-link {
     color: var(--text-color);
+    margin-right: 50px;
+    margin-left: auto;
+}
+.contact-link:last-child {
+    margin-right: 0px;
+    margin-left: 0px;
 }
 .contact-link:hover, 
 .contact-link:focus {
@@ -129,7 +137,7 @@ letter-spacing: 0.06em;
 text-transform: uppercase;
 max-width: 696px;
 margin: 0 auto;
-padding-bottom: 30px;
+margin-bottom: 30px;
 }
 /* --------------------BTN index----------- */
 .order-btn {
@@ -143,8 +151,6 @@ line-height: 1.87;
 letter-spacing: 0.06em;
 font-family: "Roboto";
 margin: 0 auto;
-
-
 }
 .order-btn:hover, .order-btn:focus {
     background-color: #2181f0;
@@ -171,17 +177,29 @@ line-height: 1.5;
 letter-spacing: 0.03em;
 }
 .features-list {
+    display: flex;
+    flex-wrap: wrap;
+    list-style: none;
+    flex-basis: calc(100% / 4 -30px );
+
+
 }
-.features-item {    width: 270px;
+.features-item {    
     margin-right: 30px;
+    width: 270px;
 }
-.features-item:last-child {
+.features-item:nth-child(4n+4) {
     margin-right: 0;
 }
 /* ------------------PIC index-------- */
-.pic-list {
+.pic {
+    padding-bottom: 94px;
 }
+.pic-list {
+    display: flex;
+    flex-wrap: wrap;
 
+}
 .pic-title {
 color: var(--headlines-color);
 text-align: center;font-style: normal;
@@ -189,36 +207,40 @@ font-weight: bold;
 font-size: 36px;
 line-height: 1.16;
 letter-spacing: 0.03em;
-padding-bottom: 50px;
+margin-bottom: 50px;
 }
 .pic-item {
     margin-right: 30px;
-        padding-bottom: 94px;
+    flex-basis: calc(100% / 3 - 30px );
+
 }
-.pic-item:last-child {
+.pic-item:nth-child(3n+3) {
     margin-right: 0;
 }
 /* ---------------------TEAM index------ */
 .team {
     background-color: var(--btn-color);
-        padding-bottom: 94px;
+    padding-top: 94px;
+    padding-bottom: 94px;
 
 }
-.team-list {}
+.team-list {
+    display: flex;
+    flex-wrap: wrap;
+}
 .team-item {
     background-color: var(--text-white-color);
     margin-right: 30px;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-border-radius: 0px 0px 4px 4px;
+    border-radius: 0px 0px 4px 4px;
 }
-.team-item:last-child {
+.team-item:nth-child(4n+4) {
     margin-right: 0;
 }
 .team-title {
 color: var(--headlines-color);
 text-align: center;
-padding-top: 94px;
-padding-bottom: 50px;
+margin-bottom: 50px;
 font-style: normal;
 font-weight: bold;
 font-size: 36px;
@@ -233,6 +255,7 @@ font-size: 16px;
 line-height: 1.18;
 text-align: center;
 letter-spacing: 0.03em;
+margin-bottom: 10px;
 }
 .team-position {
 color: var(--text-color);
@@ -243,16 +266,23 @@ line-height: 1.18;
 text-align: center;
 letter-spacing: 0.03em;
 }
+.team-card {
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
+
 /* ----------------MAIN portfolio----- */
 /* --------------FILTER port----- */
+.project {
+    padding-top: 94px;
+    padding-bottom: 94px;
+}
 .filter-list {
 display: flex;
 justify-content: center;
-padding-top: 94px;
-padding-bottom: 50px;
+margin-bottom: 50px;
 }
 .filter-item {
-        /* text-align: center; */
 margin-right: 8px;
 }
 .filter-item:last-child {
@@ -272,6 +302,12 @@ border-radius: 4px;
 font-family: "Roboto";
 border: 0;
 font-family: inherit;
+padding: 6px 22px;
+}
+.btn-current {
+    background-color: var(--accent-color);
+    color: var(--text-white-color);
+    
 }
 .filter-btn:hover, 
 .filter-btn:focus {
@@ -281,6 +317,27 @@ font-family: inherit;
 border-radius: 4px;
 }
 /* --------------PROJECT port---- */
+.project-list {
+display: flex;
+flex-wrap: wrap;
+}
+.project-item {
+background-color: var(--text-white-color);
+border: 1px solid #EEEEEE;
+width: 370px;
+margin-right: 30px;
+margin-bottom: 30px;
+}
+.project-item:nth-child(3n){
+    margin-right: 0;
+}
+.project-item:nth-last-child(-n + 3) {
+    margin-bottom: 0;
+}
+.project-card {
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
 
 .projeсt-name {
 color: var(--headlines-color);
@@ -288,12 +345,10 @@ font-style: normal;
 font-weight: bold;
 font-size: 18px;
 line-height: 2;
-letter-spacing: 0.06em;}
-.btn-current {
-    background-color: var(--accent-color);
-    color: var(--text-white-color);
-    
+letter-spacing: 0.06em;
+margin-bottom: 4px;
 }
+
 .projeсt-part {
 color:var(--text-color);
 font-style: normal;
@@ -302,42 +357,16 @@ font-size: 16px;
 line-height: 1.87;
 letter-spacing: 0.03em;
 }
-.project-list {
-    list-style: none;
-    display: flex;
-    flex-wrap: wrap;
-}
-.project-item {
-    width: 370px;
-    height: 404px;
-    background-color: var(--text-white-color);
-display: block;
-border: 1px solid #EEEEEE;
-margin-right: 30px;
-margin-bottom: 30px;
-}
-.project-item:nth-child(3n){
-    margin-right: 0;
-}
-.project-item:last-child {
-    margin-bottom: 94px;
-}
-.
+
 /* -----footer-------- */
 .footer {
-width: 1600px;
 }    
 .footer-box {
     padding-top: 60px;
     padding-bottom: 60px;
     background-color: var(--background-color);
+}
 
-}
-.footer-adr {
-    padding-top: 20px;
-    padding-bottom: 9px;
-    font-style: normal;
-}
 .footer-logo-link {
     color: var(--text-white-color);
     font-family: "Raleway";
@@ -346,7 +375,12 @@ font-weight: bold;
 font-size: 26px;
 line-height: 1.1;
 letter-spacing: 0.03em;
-
+margin-bottom: 20px;
+display: block;
+}
+.footer-adr {
+    font-style: normal;
+    margin-bottom: 9px;
 }
 .footer-map {
 color: var(--text-white-color);
@@ -356,28 +390,27 @@ font-size: 14px;
 line-height: 1.71;
 letter-spacing: 0.03em;
 }
-.footer-list {
-    display: inline;
-}
 
 .footer-item {
     box-sizing: border-box;
 
 }
-.footer-list-link {
+.footer-link {
 color: rgba(255, 255, 255, 0.6);
 font-style: normal;
 font-weight: normal;
 font-size: 14px;
 line-height: 1.71;
 letter-spacing: 0.03em;
-padding-bottom: 9px;
+display: block;
+margin-bottom: 9px;
+
 }
-.footer-list-link:last-child {
-    padding-bottom: 0;
+.footer-link:last-child {
+    margin-bottom: 0;
 }
-.footer-list-link:hover,
-.footer-list-link:focus {
+.footer-link:hover,
+.footer-link:focus {
     color:var(--text-white-color);
 }
 
