--- a/stylse/styles.css
+++ b/stylse/styles.css
@@ -151,6 +151,10 @@ line-height: 1.87;
 letter-spacing: 0.06em;
 font-family: "Roboto";
 margin: 0 auto;
+border: none;
+padding: 10px 32px;
+box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+border-radius: 4px;
 }
 .order-btn:hover, .order-btn:focus {
     background-color: #2181f0;
