--- a/stylse/styles.css
+++ b/stylse/styles.css
@@ -27,8 +27,7 @@ body {
 }
 /* -----------------HEDER --------------*/
 .header {
-    border: 1px solid #ECECEC;
-
+border-bottom: 1px solid #ECECEC;
 
 }
 .header-box {
@@ -171,13 +170,14 @@ font-size: 14px;
 line-height: 1.14;
 letter-spacing: 0.03em;
 text-transform: uppercase;
+margin-bottom: 10px;
 }
 .features-description {
 color: var(--text-color);
 font-style: normal;
 font-weight: normal;
 font-size: 14px;
-line-height: 1.5;
+line-height: 1.7;
 letter-spacing: 0.03em;
 }
 .features-list {
@@ -324,6 +324,8 @@ border-radius: 4px;
 .project-list {
 display: flex;
 flex-wrap: wrap;
+/* margin-right: -30px;
+margin-bottom: -30px; */
 }
 .project-item {
 background-color: var(--text-white-color);
@@ -339,8 +341,7 @@ margin-bottom: 30px;
     margin-bottom: 0;
 }
 .project-card {
-    padding-top: 20px;
-    padding-bottom: 20px;
+padding: 20px 24px;
 }
 
 .projeсt-name {
@@ -360,6 +361,9 @@ font-weight: normal;
 font-size: 16px;
 line-height: 1.87;
 letter-spacing: 0.03em;
+}
+.projeсt-image {
+    display: block;
 }
 
 /* -----footer-------- */
